--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,6 +46,8 @@ r.FirstPerson.SelfShadow=1
 r.SkinCache.CompileShaders=True
 
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.AutoExposure.Bias=1.000000
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
