--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -48,6 +48,7 @@ r.SkinCache.CompileShaders=True
 r.RayTracing.RayTracingProxies.ProjectEnabled=True
 r.DefaultFeature.AutoExposure=False
 r.DefaultFeature.AutoExposure.Bias=1.000000
+r.CustomDepth=3
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
